Charts with Selections

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/pie-chart">Pie Chart</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/sorting-chart">Sort Chart</a>
+      </li>
     </ul>
   </div>
 </nav>
