--- a/src/app/bar-mutliseries/bar-mutliseries.component.html
+++ b/src/app/bar-mutliseries/bar-mutliseries.component.html
@@ -1,3 +1,4 @@
 <h2 class="py-2 text-center">{{title}}</h2>
 <svg width="960" height="500" class="mx-auto d-block"></svg>
+<div class="status font-weight-bold">Click on a Area to show the total population</div>
 <h4 class="pt-5 text-center">Bar Chart MultiSeries Showing age of people according to years</h4>
